--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: upptime # The name of this repository
 sites:
   - name: IBM
     url: https://www.ibm.com
+  - name: Advocacy Hub
+    url: https://www.ibm.com/community/z/advocacy/
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
 
