--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime # The name of this repository
 
 sites:
   - name: IBM
-    url: https://www.ibm.com.test
+    url: https://www.ibm.com
   - name: Advocacy Hub
     url: https://www.ibm.com/community/z/advocacy/
   - name: Test Broken Site
