debug without __dangerous__body_down

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -31,17 +31,17 @@ sites:
   - name: T90 (WP) Home page
     url: https://www.ibm.com/community/z-and-cloud/
     icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'Contact an expert'
-    __dangerous__body_down: 'wp-json'
+    # __dangerous__body_down_if_text_missing: 'Contact an expert'
+    # __dangerous__body_down: 'wp-json'
   - name: T90 (WP) Japanese home page
     url: https://www.ibm.com/community/z-and-cloud/ja/
     icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'Contact an expert'
-    __dangerous__body_down: 'wp-json'
+    # __dangerous__body_down_if_text_missing: 'Contact an expert'
+    # __dangerous__body_down: 'wp-json'
   - name: Z Community (WP) Home page
     url: https://www.ibm.com/community/z
     icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'Join the new IBM Z and LinuxONE Community'
+    # __dangerous__body_down_if_text_missing: 'Join the new IBM Z and LinuxONE Community'
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
