--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -36,7 +36,7 @@ sites:
   - name: T90 (WP) Japanese home page
     url: https://www.ibm.com/community/z-and-cloud/ja/
     icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'Contact an expert'
+    __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
     # __dangerous__body_down: 'wp-json'
   - name: Z Community (WP) Home page
     url: https://www.ibm.com/community/z
