--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,9 +11,14 @@ sites:
     url: https://www.ibm.com/community/z/api/node/community/public
     icon: https://www.ibm.com/favicon.ico
     headers: 
+      # base64 encoded: username:password
       - "Authorization: Basic public:$SECRET_COMMUNITY_NODE_RED_PUBLIC"
       - "Content-Type: text/plain"
-    __dangerous__body_down_if_text_missing: 9476eac0-4605-4c10-906d-01a95923ae0b
+    # __dangerous__body_down_if_text_missing: 9476eac0-4605-4c10-906d-01a95923ae0b
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 401
   - name: Fans of Z (HL) Group page
     url: https://community.ibm.com/community/user/ibmz-and-linuxone/groups/group-home?CommunityKey=b8b88f20-24c8-49f0-9021-4a8c6247a067
     icon: https://www.ibm.com/favicon.ico
@@ -32,12 +37,10 @@ sites:
     url: https://www.ibm.com/community/z-and-cloud/
     icon: https://www.ibm.com/favicon.ico
     __dangerous__body_down_if_text_missing: 'Contact an expert'
-    __dangerous__body_down: 'wp-json'
   - name: T90 (WP) Japanese home page
     url: https://www.ibm.com/community/z-and-cloud/ja/
     icon: https://www.ibm.com/favicon.ico
     __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
-    __dangerous__body_down: 'wp-json'
   - name: Z Community (WP) Home page
     url: https://www.ibm.com/community/z
     icon: https://www.ibm.com/favicon.ico
