--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,8 +16,6 @@ sites:
       - "Content-Type: text/plain"
     # __dangerous__body_down_if_text_missing: 9476eac0-4605-4c10-906d-01a95923ae0b
     expectedStatusCodes:
-      - 200
-      - 201
       - 401
   - name: Fans of Z (HL) Group page
     url: https://community.ibm.com/community/user/ibmz-and-linuxone/groups/group-home?CommunityKey=b8b88f20-24c8-49f0-9021-4a8c6247a067
@@ -33,6 +31,8 @@ sites:
       - "Content-Type: application/json"
     body: '{ "tag": "IBM Z", "limit": 1 }'
     __dangerous__body_down_if_text_missing: 'Blogs":[{' # need to confirm the content
+    expectedStatusCodes:
+      - 401
   - name: T90 (WP) Home page
     url: https://www.ibm.com/community/z-and-cloud/
     icon: https://www.ibm.com/favicon.ico
@@ -40,7 +40,8 @@ sites:
   - name: T90 (WP) Japanese home page
     url: https://www.ibm.com/community/z-and-cloud/ja/
     icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
+    # __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
+    __dangerous__body_down: 'wp-json'
   - name: Z Community (WP) Home page
     url: https://www.ibm.com/community/z
     icon: https://www.ibm.com/favicon.ico
