debug with T90 and Middleware

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -32,7 +32,7 @@ sites:
     body: '{ "tag": "IBM Z", "limit": 1 }'
     __dangerous__body_down_if_text_missing: 'Blogs":[{' # need to confirm the content
     expectedStatusCodes:
-      - 401
+      - Unauthorized401
   - name: T90 (WP) Home page
     url: https://www.ibm.com/community/z-and-cloud/
     icon: https://www.ibm.com/favicon.ico
@@ -40,7 +40,7 @@ sites:
   - name: T90 (WP) Japanese home page
     url: https://www.ibm.com/community/z-and-cloud/ja/
     icon: https://www.ibm.com/favicon.ico
-    # __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
+    __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
     __dangerous__body_down: 'This test string definitely does not exist wp-json'
   - name: Z Community (WP) Home page
     url: https://www.ibm.com/community/z
