--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,26 +6,30 @@ sites:
   - name: Advocacy Hub
     url: https://www.ibm.com/community/z/advocacy/
     icon: https://www.ibm.com/favicon.ico
-  - name: Community Node-RED
-    url: https://www.ibm.com/community/z/api/node/community/public
-    icon: https://www.ibm.com/favicon.ico
-    headers: 
-      - "Authorization: Basic $SECRET_COMMUNITY_NODE_RED"
-      - "Content-Type: text/plain"
-    __dangerous__body_down_if_text_missing: 9476eac0-4605-4c10-906d-01a95923ae0b
   - name: Fans of Z (HL) Group page
-    url: https://community.ibm.com/community/user/ibmz-and-linuxone/groups/group-home?CommunityKey=b8b88f20-24c8-49f0-9021-4a8c6247a067
+    url: https://community.ibm.com/community/user/ibmz-and-linuxone/groups/public?CommunityKey=b8b88f20-24c8-49f0-9021-4a8c6247a067
     icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: "Login or register"
-  - name: Middleware Aggregation API
-    url: https://www.ibm.com/community/z/api/cmt/getContentAggregation
+    __dangerous__body_down_if_text_missing: "cratos-lead-space-loaded"
+  - name: api/core/contents/findAll
+    url: https://community.ibm.com/zsystems/api/core/contents/findAll
     icon: https://www.ibm.com/favicon.ico
     method: POST
     headers: 
-      - "Authorization: Basic $SECRET_MIDDLEWARE_AGGREGATION_API"
       - "Content-Type: application/json"
-    body: '{ "tag": "IBM Z", "limit": 1 }'
-    __dangerous__body_down_if_text_missing: '"blogs":[{'
+      - "accept: application/json"
+      - "x-api-key: $CORE_PUBLIC_API_KEY"
+    body: '{"limit": 1}'
+    __dangerous__body_down_if_text_missing: '"rows":['
+  - name: api/core/events/findAll
+    url: https://community.ibm.com/zsystems/api/core/events/findAll
+    icon: https://www.ibm.com/favicon.ico
+    method: POST
+    headers: 
+      - "Content-Type: application/json"
+      - "accept: application/json"
+      - "x-api-key: $CORE_PUBLIC_API_KEY"
+    body: '{"limit": 1}'
+    __dangerous__body_down_if_text_missing: '"rows":['
   - name: T90 (WP) Home page
     url: https://www.ibm.com/community/z-and-cloud/
     icon: https://www.ibm.com/favicon.ico
@@ -36,10 +40,9 @@ sites:
     # __dangerous__body_down_if_text_missing: 'Contact an expert'
     __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
   - name: Z Community (WP) Home page
-    url: https://www.ibm.com/community/z
+    url: https://community.ibm.com/zsystems/home/
     icon: https://www.ibm.com/favicon.ico
-    # __dangerous__body_down_if_text_missing: 'Join the new IBM Z and LinuxONE Community'
-    __dangerous__body_down_if_text_missing: 'IBM Z and LinuxONE Community'
+    __dangerous__body_down_if_text_missing: 'cratos-lead-space'
   - name: IBM Z Advocacy Hub
     url: https://community.ibm.com/zsystems/advocacy/
     icon: https://www.ibm.com/favicon.ico
