--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,7 @@ sites:
     url: https://community.ibm.com/community/user/ibmz-and-linuxone/groups/public?CommunityKey=b8b88f20-24c8-49f0-9021-4a8c6247a067
     icon: https://www.ibm.com/favicon.ico
     __dangerous__body_down_if_text_missing: "cratos-lead-space-loaded"
-  - name: api/core/contents/findAll
+  - name: API - core - contents/findAll
     url: https://community.ibm.com/zsystems/api/core/contents/findAll
     icon: https://www.ibm.com/favicon.ico
     method: POST
@@ -20,7 +20,7 @@ sites:
       - "x-api-key: $CORE_PUBLIC_API_KEY"
     body: '{"limit": 1}'
     __dangerous__body_down_if_text_missing: '"rows":['
-  - name: api/core/events/findAll
+  - name: API - core - events/findAll
     url: https://community.ibm.com/zsystems/api/core/events/findAll
     icon: https://www.ibm.com/favicon.ico
     method: POST
