--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,6 +10,25 @@ sites:
     url: https://community.ibm.com/community/user/ibmz-and-linuxone/groups/public?CommunityKey=b8b88f20-24c8-49f0-9021-4a8c6247a067
     icon: https://www.ibm.com/favicon.ico
     __dangerous__body_down_if_text_missing: "cratos-lead-space-loaded"
+  - name: T90 (WP) Home page
+    url: https://www.ibm.com/community/z-and-cloud/
+    icon: https://www.ibm.com/favicon.ico
+    __dangerous__body_down_if_text_missing: 'Contact an expert'
+  - name: T90 (WP) Japanese home page
+    url: https://www.ibm.com/community/z-and-cloud/ja/
+    icon: https://www.ibm.com/favicon.ico
+    # __dangerous__body_down_if_text_missing: 'Contact an expert'
+    __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
+  - name: Z Community (WP) Home page
+    url: https://community.ibm.com/zsystems/home/
+    icon: https://www.ibm.com/favicon.ico
+    __dangerous__body_down_if_text_missing: 'cratos-lead-space'
+  - name: IBM Z Advocacy Hub
+    url: https://community.ibm.com/zsystems/advocacy/
+    icon: https://www.ibm.com/favicon.ico
+  - name: Validated Open Source Software
+    url: https://community.ibm.com/zsystems/oss/
+    icon: https://www.ibm.com/favicon.ico
   - name: API - core - contents/findAll
     url: https://community.ibm.com/zsystems/api/core/contents/findAll
     icon: https://www.ibm.com/favicon.ico
@@ -30,25 +49,6 @@ sites:
       - "x-api-key: $CORE_PUBLIC_API_KEY"
     body: '{"limit": 1}'
     __dangerous__body_down_if_text_missing: '"rows":['
-  - name: T90 (WP) Home page
-    url: https://www.ibm.com/community/z-and-cloud/
-    icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'Contact an expert'
-  - name: T90 (WP) Japanese home page
-    url: https://www.ibm.com/community/z-and-cloud/ja/
-    icon: https://www.ibm.com/favicon.ico
-    # __dangerous__body_down_if_text_missing: 'Contact an expert'
-    __dangerous__body_down_if_text_missing: 'IBMエキスパートにコンタクト'
-  - name: Z Community (WP) Home page
-    url: https://community.ibm.com/zsystems/home/
-    icon: https://www.ibm.com/favicon.ico
-    __dangerous__body_down_if_text_missing: 'cratos-lead-space'
-  - name: IBM Z Advocacy Hub
-    url: https://community.ibm.com/zsystems/advocacy/
-    icon: https://www.ibm.com/favicon.ico
-  - name: Validated Open Source Software
-    url: https://community.ibm.com/zsystems/oss/
-    icon: https://www.ibm.com/favicon.ico
   - name: API - core - blocks/6
     url: https://community.ibm.com/zsystems/api/core/blocks/6
     headers:
@@ -68,7 +68,7 @@ sites:
       - "Content-Type: application/json"
       - "accept: application/json"
       - "x-api-key: $ADVOCACY_PUBLIC_API_KEY"
-    body: '{}'
+    body: '{"limit": 1}'
   - name: API - agenda - events/1
     url: https://community.ibm.com/zsystems/api/agenda/events/1
     headers:
